[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "partial-curve-matching"
version = "0.1.0"
description = "Partial curve matching algorithms implemented in Rust with Python bindings"
authors = [{name = "Jeroen van Tubergen", email = "jvtubergen@pm.me"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/jvtubergen/partial-curve-matching-rs"

[tool.maturin]
python-source = "python"
module-name = "partial_curve_matching"
manifest-path = "pcm_pyo3/Cargo.toml"
