[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcm-python"
version = "0.1.0"
description = "Python bindings for partial curve matching library"
authors = [
    {name = "Jeroen van Tubergen", email = "jvtubergen@pm.me"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/jvtubergen/partial-curve-matching-rs"

[tool.hatch.build.targets.wheel]
packages = ["src/pcm_python"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
